// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end 1`] = `
Object {
  "endX": 51,
  "endY": 52,
  "startX": 0,
  "startY": 0,
}
`;

exports[`end 2`] = `
Object {
  "endX": 54,
  "endY": 56,
  "startX": 0,
  "startY": 0,
}
`;

exports[`points 1`] = `
Array [
  0,
  0,
  50,
  0,
  0,
  50,
  50,
  50,
]
`;

exports[`start 1`] = `
Object {
  "endX": 50,
  "endY": 50,
  "startX": 1,
  "startY": 2,
}
`;

exports[`start 2`] = `
Object {
  "endX": 50,
  "endY": 50,
  "startX": 4,
  "startY": 6,
}
`;
